resolving mixed content issue

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 
 
 
-<form method="post" name="DecodingForm" action="http://online-barcode-reader.com/cgi-bin/brcgi" enctype="multipart/form-data" target="f2">
+<form method="post" name="DecodingForm" action="//www.online-barcode-reader.com/cgi-bin/brcgi" enctype="multipart/form-data" target="f2">
 
 
 <div class="uploadArea">
