--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
-<!--?xml version="1.0" encoding="iso-8859-1"?-->
 <!DOCTYPE html >
-<html xmlns="http://www.w3.org/1999/xhtml"><head>
+<html ><head>
 <title>Opóźniony samolot. Rozpoznawanie</title>
 <meta name="title" content="Opóźniony samolot. Rozpoznawanie">
 <meta name="author" content="Volodymyr Ostruk">
